PGM util